<resources>

    <string name="app_name">Guess</string>
    <string name="enter_name">Please enter your name</string>
    <string name="guessapp">GuessApp</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name!</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="submit">submit</string>
    <string name="todo">TODO</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="username">Username</string>
    <string name="your_score_is_8_out_of_10">Your Score is 8 out of 10</string>
    <string name="finish">FINISH</string>
    <string name="guess_what_kind_of_animal">Guess what kind of animal?</string>
    <string name="animal">ANIMAL</string>
    <string name="bird">BIRD</string>
    <string name="insect">INSECT</string>
    <string name="the_following_which_quality_is_suitable_for_them">The following which quality is suitable for them?</string>
    <string name="flayeble">FLAYEBLE</string>
    <string name="swimmable">SWIMMABLE</string>
    <string name="runnable">RUNNABLE</string>
    <string name="select_answer">Please, select your answer!</string>
    <string name="selec_radio">Selected RadioButton is:</string>
    <string name="checkbox_chois">\"\n CheckBox Choices: \n \"</string>
    <string name="your_checkscore_is_2_out_of_10">Your Checkscore is 2 out of 10</string>
    <string name="your_score_is">Your score is %d out of %d</string>
    <string name="your_checkbox_score">Your checkscore is %d out of %d</string>
    <string name="enter_your_answer">"Please, enter your answer!</string>
    <string name="your_entrytext_score">Your EntryText score is %d out of %d</string>
    <string name="guess_what_kind_of_fruit">Guess what kind of fruit?</string>
</resources>