<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guess_img"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/size_20dp"
    tools:context=".ResultActivity">


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/result"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="331dp"
        android:layout_height="266dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/congratul_img" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/hey_congratulations"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/your_score_is_8_out_of_10"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="@dimen/text_size_20sp" />

    <TextView
        android:id="@+id/tv_checkScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/your_checkscore_is_2_out_of_10"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="@dimen/text_size_20sp" />

    <TextView
        android:id="@+id/tv_entryTextScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/your_entrytext_score"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="@dimen/text_size_20sp" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:background="@android:color/white"
        android:text="@string/finish"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold" />


</LinearLayout>